--- a/package.json
+++ b/package.json
@@ -8,11 +8,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.1.2",
+    "@apollo/react-hooks": "^4.0.0",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
+    "apollo-boost": "^0.4.9",
+    "apollo-server-micro": "^2.16.1",
+    "dotenv": "^8.2.0",
     "emotion-theming": "^10.0.27",
+    "graphql": "^15.3.0",
     "next": "9.5.1",
+    "polished": "^3.6.5",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-apollo": "^3.1.5",
+    "react-dom": "16.13.1",
+    "react-router-dom": "^5.2.0"
   }
 }
